文件浏览，暂时不支持上传

--- a/src/main/resources/templates/left.html
+++ b/src/main/resources/templates/left.html
@@ -71,6 +71,7 @@
                     <ul class="menuson">
                             <li><cite></cite><a th:href="@{/partner/partnerType}" target="rightFrame" onclick="Show(this)">企业类型管理</a><i></i></li>
                             <li><cite></cite><a th:href="@{/partner/partner}" target="rightFrame" onclick="Show(this)">企业管理</a><i></i></li>
+                            <li><cite></cite><a th:href="@{/partner/partnerFile}" target="rightFrame" onclick="Show(this)">企业档案</a><i></i></li>
                             <li><cite></cite><a th:href="@{/partner/partner}" target="rightFrame" onclick="Show(this)">合作记录管理</a><i></i></li>
                     </ul>
                 </dd>
